# CycSim

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: emp_model.rs  kmer.rs  main.rs  main.v1.rs  mlib.rs  mode_io.rs  option.rs  qual.rs  reads.rs  sim.rs
test/: hh.sh  read.bam
