[package]
name = "cycsim"
version = "1.0.4"
edition = "2024"

[dependencies]
byte-unit = "5.1.6"
byteorder = "1.5.0"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["string"] }
crossbeam-channel = "0.5.15"
ctor = "0.4.2"
edlib_rs = "0.1.2"
kseq = "0.5.3"
lazy_static = "1.5.0"
libc = "0.2.172"
libc-stdhandle = "0.1.0"
log = "0.4.27"
mimalloc = "0.1.47"
nohash-hasher = "0.2.0"
parking_lot = "0.12.4"
path-absolutize = "3.1.1"
rand = "0.9.1"
rand_distr = "0.5.1"
rayon = "1.10.0"
reqwest =  { version = "0.12", features = ["blocking"] }
rust-htslib = "0.49.0"
rustc-hash = "2.1.1"
zstd = { version = "0.13", features = ["zstdmt"] }


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
